--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/MemberInfoList/MemberInfoList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/MemberInfoList/MemberInfoList.cshtml
@@ -19,7 +19,7 @@
                             <option value="all">全部通知</option>
                             <option value="@MailInfoTypeEnum.到價通知.ToString()">@MailInfoTypeEnum.到價通知.ToString()</option>
                             <option value="@MailInfoTypeEnum.理顧預約.ToString()">@MailInfoTypeEnum.理顧預約.ToString()</option>
-                            <option value="@MailInfoTypeEnum.專屬優惠.ToString()">@MailInfoTypeEnum.專屬優惠.ToString()</option>
+                            <option value="@MailInfoTypeEnum.優惠活動.ToString()">@MailInfoTypeEnum.優惠活動.ToString()</option>
                             <option value="@MailInfoTypeEnum.週月報.ToString()">@MailInfoTypeEnum.週月報.ToString()</option>
                         </select>
                     </div>
