--- a/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
@@ -150,6 +150,7 @@
             "/themes/vendor/noUiSlider/nouislider.min.js",
             "/themes/vendor/wnumb/wNumb.min.js",
             "/themes/js/formula.min.js",
+            "/themes/js/lodash.min.js",
             "/themes/js/filter.min.js",
             "/themes/js/plugins.min.js",
             "/themes/js/main.min.js")
